--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name":"shadow-puppet","version":"1.0.0","scripts":{"start":"node server.js"},"dependencies":{"ws":"^8.14.0"}}
+{"name":"shadow-puppet","version":"1.0.0","scripts":{"start":"node server.js"},"engines":{"node":">=18"},"dependencies":{"ws":"^8.14.0"}}
